# gbd-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
assets/css/: tailwind.css
config/: settings.py  urls.py
db/: supabase_setup.sql
docker/: init-db.sql
pipeline/: __init__.py  aggregate.py  categorize.py  clean.py  config.py  emissions.py  ingest.py  interface.py  pipeline.py  report.py
pipeline/data/: categories.json  factors.json  units.json
pipeline/tests/: test_categorize.py  test_emissions.py  test_pipeline.py  test_security.py
runs/: admin.py  apps.py  checks.py  db.py  middleware.py  models.py  processing.py  queue.py  scoping.py  urls.py  validation.py  views.py
runs/migrations/: 0001_initial.py  0002_rls_policies.py  0003_analysisrun_summary.py  0004_profile.py  0005_tag_analysisrun_tags.py  0006_seed_tags.py  0007_analysisrun_progress_analysisrun_progress_message.py
runs/storage/: __init__.py  base.py  local.py  signing.py  supabase.py
runs/tests/: conftest.py  test_checks.py  test_dashboard.py  test_queue.py  test_rls.py  test_security.py  test_validation.py  (+2 more)
sample_data/: sample.csv  sample_dated.csv
scripts/: browser_check.py  gen_sample.py  setup_gbd_role.py  shot_dashboard.py  shot_report.py  shot_report_dated.py  shot_report_full.py  shot_selfserve.py  shot_theme.py  shot_ui.py  shot_upload.py  shot_upload_now.py
styles/: source.css
templates/: base.html  dashboard.html  run_detail.html  status.html  upload.html
(+8 files in other folders)
